# mediasoft

./: alembic.ini  endpoints.py  main.py  pyproject.toml  schemas.py  services.py  settings.py
db/: __init__.py  base.py  models.py
migrations/: env.py
migrations/versions/: 0672110d31cf_.py  068144cd334f_.py
